--- a/src/02_term_matching/01_OECD_term_matching.ipynb
+++ b/src/02_term_matching/01_OECD_term_matching.ipynb
@@ -570,7 +570,7 @@
     "#         return matched_words\n",
     "#     else:\n",
     "#         #return False\n",
-    "#         return []"
+    "#         return []\n"
    ]
   },
   {
