--- a/src/03_ai_wiki/10_nmf.ipynb
+++ b/src/03_ai_wiki/10_nmf.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dab3dj/.conda/envs/CO_BERT/lib/python3.8/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -29,12 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#TODO:Input a dataframe that are ai related abstracts, need variables: final_frqwds_removed\n",
-    "abstracts = pd.read_csv(r'/home/zz3hs/git/dspg21RnD/data/dspg21RnD/bert_ai_abstracts.csv')   "
+    "\n",
+    "abstracts = pd.read_csv('~/git/dspg21RnD/data/dspg21RnD/bert_ai_abstracts.csv')   "
    ]
   },
   {
@@ -46,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,27 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         [multiprotein, y_secretase, proteolytically_cl...\n",
-       "1         [kissl, gene, encode, peptide, kisspeptin, bin...\n",
-       "2         [biophysical, basis, thermodynamics_kinetic, m...\n",
-       "3         [obesity, adverse_pregnancyoutcome, great, hea...\n",
-       "4         [local, potato, advisory, express, interest, m...\n",
-       "                                ...                        \n",
-       "690809    [pathophysiology, schizophrenia, advance, thed...\n",
-       "690810    [alzheimer, ad, amyotrophic_lateral_sclerosis_...\n",
-       "690811    [highest, mortality, acute, care, encounter, r...\n",
-       "690812    [paradigm, kidney, largely, stagnant, decade, ...\n",
-       "690813    [division, intramural, population, health, dip...\n",
-       "Name: final_frqwds_removed, Length: 690814, dtype: object"
+       "0       ['bring', 'strong', 'interdisciplinary', 'team...\n",
+       "1       ['modern', 'digital', 'pathology', 'department...\n",
+       "2       ['modern', 'digital', 'pathology', 'department...\n",
+       "3       ['arching', 'value', 'underutilize', 'seafood'...\n",
+       "4       ['antimicrobial', 'resistance', 'amr', 'press'...\n",
+       "                              ...                        \n",
+       "7928    ['neurodegenerative', 'disorder', 'amyotrophic...\n",
+       "7929    ['neuroimaging', 'neurophysiolgy', 'comprehens...\n",
+       "7930    ['functional', 'genomic', 'employ', 'genetic',...\n",
+       "7931    ['override', 'ii', 'national', 'dissemination'...\n",
+       "7932    ['hyphy', 'httpwwwhyphyorg', 'scriptable', 'so...\n",
+       "Name: final_frqwds_removed, Length: 7933, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +177,7 @@
        "Name: final_frqwds_removed, Length: 690814, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +209,7 @@
        "'multiprotein y_secretase proteolytically_cleave intramembrane region amyloid_precursorprotein_app turn plaque alzheimer ad patient catalyticcomponent y_secretase intramembrane_aspartyl_protease iap presenilin mutation inpresenilin directly link familial onset ad member iap family signalpeptide peptidase_spp proteolyze remnant peptide beencleave peptidase biochemistry individual spp onlybegin elucidate homologue kingdom life presenilin spp exhibitsignificant sequence similarity strongly share structural catalytic feature amolecular tractable spp likely drug presenilin y_secretase express solve crystal anextremophilic bacterial spp ortholog transition analog inhibitor substratemimic drug candidate screen silico intramembraneprotease insight biochemistry intramembrane_proteolysis enable ad drug screen'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,13 +483,62 @@
    "source": [
     "# hot and cold figure "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Emerging Topics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-0f555625bd41>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0myear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0myear\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'START_YEAR'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'PROJECT_START_DATE'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetYear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "##### Extract Year from PROJECT_START_DATE\n",
+    "\n",
+    "##### On our graphs, we want to be able to show year. Therefore, this getYear function gets the year from different date formats from Project Start Year/End Year\n",
+    "def getYear(a):   \n",
+    "    a = str(a)\n",
+    "    if a.find(\"/\"):\n",
+    "        splitdate = a.split(\"/\")\n",
+    "        if len(splitdate) == 3:\n",
+    "            a = splitdate[2]\n",
+    "        else:\n",
+    "            a = splitdate[0]\n",
+    "    year = str(a)\n",
+    "    return year\n",
+    "\n",
+    "df['START_YEAR'] = df['PROJECT_START_DATE'].apply(getYear)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-crystal_bert]",
+   "display_name": "Python [conda env:.conda-CO_BERT]",
    "language": "python",
-   "name": "conda-env-.conda-crystal_bert-py"
+   "name": "conda-env-.conda-CO_BERT-py"
   },
   "language_info": {
    "codemirror_mode": {
