--- a/src/Summer-2020-approach/Emerging-Topics-coronavirus-CZ.ipynb
+++ b/src/Summer-2020-approach/Emerging-Topics-coronavirus-CZ.ipynb
@@ -3978,9 +3978,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-crystal_bert]",
+   "display_name": "Python [conda env:.conda-CO_BERT]",
    "language": "python",
-   "name": "conda-env-.conda-crystal_bert-py"
+   "name": "conda-env-.conda-CO_BERT-py"
   },
   "language_info": {
    "codemirror_mode": {
