--- a/src/03_ai_wiki/10_nmf_coherence_generate.ipynb
+++ b/src/03_ai_wiki/10_nmf_coherence_generate.ipynb
@@ -217,6 +217,8 @@
     }
    ],
    "source": [
+    "#make sure the number of terms (column) is less the 100,000\n",
+    "#if greater than 100,000, use the number of terms as the keep_n parameter\n",
     "tf_idf.shape"
    ]
   },
@@ -227,21 +229,13 @@
    "outputs": [],
    "source": [
     "def createVars(docs):\n",
-    "\n",
     "    # Create the variables needed for NMF from df[final_frqwds_removed]: dictionary (id2word), corpus\n",
     "    \n",
     "    # Create Dictionary\n",
     "    id2word = gensim.corpora.Dictionary(docs)\n",
-    "\n",
-    "    if len(docs) <= 100000:\n",
-    "        id2word.filter_extremes(no_below=3, no_above=1.0,  keep_n = 100000)\n",
-    "        print(\"Use keep_n = 100,000 defalt.\")\n",
-    "    else:\n",
-    "        id2word.filter_extremes(no_below=3, no_above=1.0,  keep_n = len(docs))\n",
-    "        print(\"Number of documents exceed the dafalt number of 100,000. Use the keep_n = number of document.\")\n",
-    "\n",
+    "    id2word.filter_extremes(no_below=3, no_above=1.0,  keep_n = 100000)\n",
+    "    \n",
     "    # Create Corpus (Term Document Frequency)\n",
-    "\n",
     "    #Creates a count for each unique word appearing in the document, where the word_id is substituted for the word\n",
     "    corpus = [id2word.doc2bow(doc) for doc in docs]\n",
     "\n",
@@ -942,8 +936,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: save results, change file name\n",
-    "nmf_c.to_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_bert2_10.pkl\")"
+    "# TODO: save results as csv, no need to save as pickle file anymore, change file name\n",
+    "nmf_c['n_topics'] = nmf_c.index\n",
+    "#nmf_c.to_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_coherence_XXX.pkl\")\n",
+    "nmf_c.to_csv(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_coherence_xxx.csv\", index= False)"
    ]
   },
   {
@@ -951,9 +947,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "nmf_c.to_csv(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_bert2_10.csv\", index= False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
