--- a/src/Summer-2020-approach/AI-corpus-creation-CZ.ipynb
+++ b/src/Summer-2020-approach/AI-corpus-creation-CZ.ipynb
@@ -45,6 +45,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pull in smaller dataframe\n",
+    "import pandas as pd\n",
+    "df = pd.read_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/smaller-final-dataset2.pkl\")\n",
+    "\n",
+    "df.reset_index(inplace = True)\n",
+    "#df.rename(columns={'index':'original index'}, inplace=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -455,19 +470,13 @@
        "[690814 rows x 34 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# pull in smaller dataframe\n",
-    "import pandas as pd\n",
-    "df = pd.read_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/smaller-final-dataset2.pkl\")\n",
-    "\n",
-    "df.reset_index(inplace = True)\n",
-    "#df.rename(columns={'index':'original index'}, inplace=True)\n",
-    "\n"
+    "df"
    ]
   },
   {
@@ -529,20 +538,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_out = df[[\"PROJECT_ID\",\"ABSTRACT\", \"PROJECT_START_DATE\", \"DEPARTMENT\"]]"
+    "#df_out = df[[\"PROJECT_ID\", \"original index\", \"ABSTRACT\", \"PROJECT_START_DATE\", \"DEPARTMENT\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "df_out.to_csv('/home/zz3hs/git/dspg21RnD/data/dspg21RnD/abstracts_all.csv', index =False)"
    ]
   },
