--- a/src/05_final/03_comparison_plots_agency_srartyear.Rmd
+++ b/src/05_final/03_comparison_plots_agency_srartyear.Rmd
@@ -24,21 +24,12 @@ library(gt)
 
 uva_colors <- c("#232d4b","#2c4f6b","#0e879c","#60999a","#d1e0bf","#d9e12b","#e6ce3a","#e6a01d","#e57200","#fdfdfd")
 abstracts_gather <- readRDS("/home/zz3hs/git/dspg21RnD/shiny/data_shiny/abstracts_gather.rds")
+abstracts_gather <- abstracts_gather%>%
+  filter(method != "is_ai_eads")
+
+abstracts_gather$method <- factor(abstracts_gather$method, levels = c("Term Matching", "Term Matching + \n Topic Modeling","BERT" ))
 ```
 
-```{r}
-abstracts[c("IS_AI_OECD", "IS_AI_BERT", "is_ai_eads")][is.na(abstracts[c("IS_AI_OECD", "IS_AI_BERT", "is_ai_eads")])] <- FALSE
-
-abstracts_gather <- abstracts%>%
-  gather(method, IS_TRUE, -c(PROJECT_ID, FY, PROJECT_START_DATE, final_frqwds_removed, DEPARTMENT, AGENCY))%>%
-  filter(IS_TRUE == T)%>%
-  mutate(method = ifelse(method == "IS_AI_BERT", "BERT",
-                  ifelse(method == "IS_AI_OECD", "Term Matching",paste0("Term Matching + ", "\n", " Topic Modeling"))))
-
-abstracts_gather$method <- factor(abstracts_gather$method, levels = c("Term Matching",paste0("Term Matching + ", "\n", " Topic Modeling"), "BERT" ))
-
-#(abstracts_gather, "/Users/czang/Documents/UVA/2021DSPG/CrystalCode/dspg21RnD/shiny/data_shiny/abstracts_gather.rds")
-```
 
 ```{r}
 abstracts_gather%>%
@@ -52,10 +43,11 @@ abstracts_gather%>%
 ```
 
 
+# Agency Count
 ```{r}
 agency <- abstracts_gather %>%
   filter(!is.na(DEPARTMENT))%>% 
-  group_by(DEPARTMENT, method) %>% 
+  group_by(DEPARTMENT, method)%>%
   count()
 
 png("/home/zz3hs/git/dspg21RnD/shiny/www/all_agency.png", width = 1000, height = 600, res = 150)
@@ -67,6 +59,32 @@ ggplot(agency, aes(x= reorder(DEPARTMENT, (n)), y=n))+
   scale_fill_manual(values=c(uva_colors[2], uva_colors[4], uva_colors[9]))+
   theme_minimal()+
   labs(title = "Funding Agencies of Projects Related to Artificial intelligence", x = "Agency", y = "Number of Abstracts")+
+  theme(plot.title = element_text(size=13), 
+        axis.text = element_text(size = 10), 
+        axis.title = element_text(size = 12)) +
+  guides(fill=guide_legend(title="Filtering Method"))
+
+dev.off()
+```
+
+
+# Agency Percentage
+```{r}
+agency <- abstracts_gather %>%
+  filter(!is.na(DEPARTMENT))%>% 
+  group_by(DEPARTMENT, method)%>%
+  summarize(ai_projects_by_agency = n(), num_projects_by_agency = first(num_projects_by_agency))%>%
+  mutate(perc = ai_projects_by_agency/num_projects_by_agency )
+
+png("/home/zz3hs/git/dspg21RnD/shiny/www/all_agency_perc.png", width = 1000, height = 600, res = 150)
+
+ggplot(agency, aes(x= reorder(DEPARTMENT, (perc)), y=perc))+
+  geom_bar(stat='identity', position = "dodge", aes(fill = agency$method))+
+  theme_minimal() +
+  labs(title = "Funding Agencies of Projects Related to Artificial intelligence", x = "Agency", y = "Number of Abstracts")+
+  scale_fill_manual(values=c(uva_colors[2], uva_colors[4], uva_colors[9]))+
+  theme_minimal()+
+  labs(title = "Funding Agencies of Projects Related to Artificial intelligence", x = "Agency", y = "Percentage")+
   theme(plot.title = element_text(size=13), 
         axis.text = element_text(size = 10), 
         axis.title = element_text(size = 12)) +
@@ -98,6 +116,18 @@ abstracts_gather %>%
   guides(fill=guide_legend(title="Filtering Method"))
   
 dev.off()
+
+```
+
+
+```{r}
+ab <- abstracts_gather%>%
+  group_by(PROJECT_ID)%>%
+  summarize(N= sum(IS_TRUE))
+
+ab%>%
+  group_by(N)%>%
+  summarize(N=n(), perc = N/sum(N))
 
 ```
 
