--- a/src/04_eads_method/01_eads_filtering.ipynb
+++ b/src/04_eads_method/01_eads_filtering.ipynb
@@ -8833,9 +8833,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-HT_Bert]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-.conda-HT_Bert-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8847,7 +8847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
